src/examples/valid/factorial.ra
func factorial(n: int): int {
  accum = 1;
  for (i = 2 to n) {
    accum = accum * i;
  }
  return accum;
}

func recursiveFactorial(n: int): int {
  if (n == 0) {
    return 1;
  }
  return n * recursiveFactorial(n - 1);
}

func main(): void {
  n = 5;
  a = factorial(n);
  b = recursiveFactorial(n);
  print(a, b);
}
