src/examples/invalid/dynamic/unexistant-data-frame.ra
func main(): void {
  dataframe = read_csv("i-dont-exist.csv");
}

